--- a/proyectoV5/css/nav.css
+++ b/proyectoV5/css/nav.css
@@ -14,7 +14,7 @@ ul, ol {
 }
 
 .nav li a {
-    background-color: black;
+    background-color: transparent;
     color: #fff;
     text-decoration: none;
     padding: 10px 15px;
@@ -22,7 +22,7 @@ ul, ol {
 }
 
     .nav li a:hover {
-        background-color: gray;
+        background-color: transparent;
     }
 
 .nav > li {
