--- a/proyectoV5/loading.css
+++ b/proyectoV5/loading.css
@@ -9,7 +9,7 @@ body {
     display:flex;
     justify-content: center;
     align-items: center;
-    background: url(img/img.jpg);
+    background: url(img/prueba.png);
     background-size: cover;
     background-position: center;
 }
