--- a/proyectoV5/css/nav.css
+++ b/proyectoV5/css/nav.css
@@ -11,7 +11,7 @@ ul, ol {
 }
 
 .nav li a {
-    background-color: transparent;
+    background-color: lightgreen;
     color: #fff;
     text-decoration: none;
     padding: 10px 15px;
