--- a/proyectoV5/css/listaAdmi.css
+++ b/proyectoV5/css/listaAdmi.css
@@ -46,6 +46,7 @@
 }
 
 .contenedor_buscar {
+    margin-top:5%;
     width: 50%;
     margin-left: 30%;
     float: left;
@@ -61,7 +62,7 @@
     .contenedor_buscar input {
         width: 100%;
         height: 100%;
-        background: transparent;
+        background: lightgreen;
         border: none;
         outline: none;
         border: 2px solid rgba(255, 255, 255, .2);
@@ -75,7 +76,7 @@
     .contenedor_buscar select {
         width: 100%;
         height: 100%;
-        background: transparent;
+        background: lightgreen;
         border: none;
         outline: none;
         border: 2px solid rgba(255, 255, 255, .2);
@@ -107,7 +108,7 @@
 .contenedor_buscar .btn_buscar {
     width: 100%;
     height: 100%;
-    background: transparent;
+    background: lightgreen;
     border: none;
     outline: none;
     border: 2px solid rgba(255, 255, 255, 1);
