--- a/proyectoV5/css/listaAdmi.css
+++ b/proyectoV5/css/listaAdmi.css
@@ -55,7 +55,7 @@
     .contenedor_buscar label {
         display: inline-block;
         font-size: 20px;
-        font-family: 'Raleway', sans-serif;
+        
         width: 20%;
     }
 
@@ -63,12 +63,13 @@
         width: 100%;
         height: 100%;
         background: lightgreen;
+        backdrop-filter:brightness(0.5);
+        color:white;
         border: none;
         outline: none;
-        border: 2px solid rgba(255, 255, 255, .2);
+        border: 5px solid rgba(255, 255, 255, .2);
         border-radius: 40px;
         font-size: 16px;
-        color: #000;
         padding: 20px 45px 20px 20px;
         text-align: center;
     }
