--- a/proyectoV5/css/listaAdmi.css
+++ b/proyectoV5/css/listaAdmi.css
@@ -101,6 +101,19 @@
             text-align: center;
         }
 
+#op {
+    width: 100%;
+    height: 100%;
+    background: lightgreen;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #000;
+    padding: 20px 45px 20px 20px;
+}
+
 .contenedor_filtraciones input:focus {
     border: 5px solid lightgreen;
     outline: none;
