--- a/proyectoV5/loading.css
+++ b/proyectoV5/loading.css
@@ -15,12 +15,14 @@ body {
 }
 
 .wrapper {
+    position:center;
+    margin-top:35%;
     width: 420px;
     background: transparent;
     border: 2px solid;
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    color: #fff;
+   color:white;
     border-radius: 10px;
     padding: 30px 40px;
 }
@@ -28,6 +30,7 @@ body {
     .wrapper h1 {
         font-size: 36px;
         text-align: center;
+        color:black;
     }
 
     .wrapper .input-box {
@@ -40,13 +43,14 @@ body {
 .input-box input {
     width: 100%;
     height: 100%;
-    background: transparent;
+    
+    background-color:lavender;
     border: none;
     outline: none;
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 40px;
     font-size: 16px;
-    color: #fff;
+    color: black;
     padding: 20px 45px 20px 20px;
 }
 
@@ -75,7 +79,7 @@ body {
 }
 
 .remember-forgot a {
-    color: #fff;
+    color: black;
     text-decoration: none;
 }
 
@@ -86,7 +90,7 @@ body {
 .wrapper .btn {
     width: 100%;
     height: 45px;
-    background: #836db8;
+    background-color:lawngreen;
     border: none;
     outline: none;
     border-radius: 40px;
