--- a/proyectoV5/css/nav.css
+++ b/proyectoV5/css/nav.css
@@ -4,6 +4,7 @@
 
     margin-top: 5%;
     margin: auto;
+    width:100%;
     /*width: 900px;
     font-family: 'Courier New', Courier, monospace*/;
 }
