--- a/proyectoV5/loading.css
+++ b/proyectoV5/loading.css
@@ -17,7 +17,7 @@ body {
 .wrapper {
     position:center;
     margin-top:35%;
-    width: 420px;
+    width: 100%;
     background: transparent;
     border: 2px solid;
     backdrop-filter: blur(20px);
@@ -43,7 +43,7 @@ body {
 .input-box input {
     width: 100%;
     height: 100%;
-    
+    text-alig:center;
     background-color:lavender;
     border: none;
     outline: none;
