--- a/proyectoV5/css/listaAdmi.css
+++ b/proyectoV5/css/listaAdmi.css
@@ -42,11 +42,11 @@
     padding-top: 40px;
     
     margin-left: 3%;
-    display: flow-root;
+   /* display: flow-root;*/
 }
 
 .contenedor_buscar {
-    margin-top:5%;
+    margin-top:25%;
     width: 50%;
     margin-left: 30%;
     
@@ -151,7 +151,7 @@ button {
     }
 
 
-uin-left: au {
+/*uin-left: au {
     background: transparent;
     font-size: 20px;
     font-weight: bolder;
@@ -186,6 +186,6 @@ table tbody {
     border-top: 2px solid #000;
     width: 4%;
     right: 150px;
-    background: transparent;
+    background: transparent;*/
     /* background: #F2F2F2; */
-}
+/*}*/
