--- a/proyectoV5/css/estilosDocentes.css
+++ b/proyectoV5/css/estilosDocentes.css
@@ -7,7 +7,7 @@
     background: transparent;
    
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+   /* box-shadow: 0 0 10px rgba(0, 0, 0, .2);*/
     color: #000;
    
     padding: 30px 40px;
@@ -144,6 +144,7 @@ table {
     width: 70%;
     margin: 0 auto;
     margin-top: 30px;
+    backdrop-filter: brightness(0.7);
 }
 
     table tr th {
