--- a/proyectoV5/css/PerfilD.css
+++ b/proyectoV5/css/PerfilD.css
@@ -135,10 +135,10 @@ svg{
     border-radius: 15px;
     width: 100%;
 }
-/* footer usuario*/
-    
-/*fin*/
-.seccion-perfil-usuario .perfil-usuario-bio {
+/* fondo*/
+
+        /*fin*/
+        .seccion-perfil-usuario .perfil-usuario-bio {
     margin-bottom: 1.25rem;
     text-align: center;
 }
