--- a/proyectoV5/css/MenuPrincipal.css
+++ b/proyectoV5/css/MenuPrincipal.css
@@ -176,7 +176,7 @@ li {
 
 
 body {
-    background-image: url(../img/fondomenu.jpg);
+    background-image: url(../../img/op2.jpg);
     background-size: 1920px 1000px;
     background-repeat: no-repeat;
 }
