--- a/proyectoV5/css/EliminarU.css
+++ b/proyectoV5/css/EliminarU.css
@@ -1,48 +1,268 @@
-﻿  table {
+﻿* {
+    margin: 0 0 0px 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
 
-        backdrop-filter: brightness(0.6);
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url(../../img/op2.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+/*.wrapper {
+    position: center;
+    margin-top: 35%;
+    width: 100%;
+    background: transparent;
+    border: 2px solid;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    color: white;
+    border-radius: 10px;
+    padding: 30px 40px;
+}
+
+    .wrapper h1 {
+        font-size: 36px;
+        text-align: center;
+        color: black;
     }
 
-        table input {
+    .wrapper .input-box {
+        position: relative;
+        width: 100%;
+        height: 50px;
+        margin: 30px 0;
+    }
+
+.input-box input {
+    width: 100%;
+    height: 100%;
+    text-alig: center;
+    background-color: lavender;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: black;
+    padding: 20px 45px 20px 20px;
+}
+
+    .input-box input::placeholder {
+        color: #fff;
+    }
+
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+
+.wrapper .remember-forgot {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+}
+
+.remember-forgot label input {
+    accent-color: #fff;
+    margin-right: 3px;
+}
+
+.remember-forgot a {
+    color: black;
+    text-decoration: none;
+}
+
+    .remember-forgot a:hover {
+        text-decoration: underline;
+    }
+
+.wrapper .btn {
+    width: 100%;
+    height: 45px;
+    background-color: lawngreen;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
+}
+
+.wrapper .register-link {
+    font-size: 14.5px;
+    text-align: center;
+    margin-top: 20px 0 15px;
+}
+
+.register-link p a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+    .register-link p a:hover {
+        text-decoration: underline;
+    }
+
+
+
+.main {
+    margin-left: 3%;
+    /* margin-right: 5%; */
+    /* float: right; */
+  /* height: 100%;
+    background: transparent;
+    border: 2px solid;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    color: #000;
+    border-radius: 10px;
+    padding: 30px 40px;
+}
+
+    .main h1 {
+        text-align: center;
+        font-size: 40px;
+        font-family: 'Raleway', sans-serif;
+        padding-top: 25px;
+        font-weight: bold;
+    }
+
+    .main h2 {
+        text-align: center;
+        font-size: 20px;
+        font-family: 'Roboto', sans-serif;
+        padding-top: 10px;
+    }
+
+    .main .separador {
+        height: 4px;
+        width: 60%;
+        margin: 0 auto;
+        background: lightgreen;
+        margin-top: 10px;
+        border-radius: 3px;
+    }
+
+
+.contenedor_filtraciones {
+    padding-top: 40px;
+    margin-left: 3%;
+    /* display: flow-root;*/
+}
+
+.contenedor_buscar {
+    margin-top: 25%;
+    width: 50%;
+    margin-left: 30%;
+}
+
+    .contenedor_buscar label {
+        display: inline-block;
+        font-size: 20px;
+        width: 20%;
+    }
+
+    .contenedor_buscar input {
+        width: 100%;
+        height: 100%;
+        background: lightgreen;
+        backdrop-filter: brightness(0.5);
+        color: white;
+        border: none;
+        outline: none;
+        border: 5px solid rgba(255, 255, 255, .2);
+        border-radius: 40px;
+        font-size: 16px;
+        padding: 20px 45px 20px 20px;
+        text-align: center;
+    }
+
+    .contenedor_buscar select {
+        width: 100%;
+        height: 100%;
+        background: lightgreen;
+        border: none;
+        outline: none;
+        border: 2px solid rgba(255, 255, 255, .2);
+        border-radius: 40px;
+        font-size: 16px;
+        color: #000;
+        padding: 20px 45px 20px 20px;
+    }
+
+        .contenedor_buscar select option {
             width: 100%;
-            height: 45px;
-            background-color: lavender;
+            height: 100%;
+            background: rgb(99, 95, 95);
             border: none;
             outline: none;
+            border: 2px solid rgba(255, 255, 255, .2);
             border-radius: 40px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-            cursor: pointer;
             font-size: 16px;
-            color: #333;
-            font-weight: 600;
+            color: #000;
+            padding: 20px 45px 20px 20px;
+            text-align: center;
         }
 
-        table tr th {
-            padding: 15px;
-            border: 2px solid #000;
-            border-top: 2px solid #000;
-            width: 4%;
-            right: 90px;
-            background: lightblue;
-        }
+#op {
+    width: 100%;
+    height: 100%;
+    background: lightgreen;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #000;
+    padding: 20px 45px 20px 20px;
+}
 
-        table tr td {
-            padding: 15px;
-            border: 2px solid #000;
-            border-top: 2px solid #000;
-            width: 4%;
-            right: 150px;
-            background: transparent;
-            color: white;
-        }
+.contenedor_filtraciones input:focus {
+    border: 5px solid lightgreen;
+    outline: none;
+}
 
-        table tbody {
-            margin-top: 15%;
-            padding: 15px;
-            border: 2px solid #000;
-            border-top: 2px solid #000;
-            width: 4%;
-            right: 150px;
-            background: transparent;
-            /* background: #F2F2F2; */
-        }
+.contenedor_buscar .btn_buscar {
+    width: 100%;
+    height: 100%;
+    background: lightgreen;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, 1);
+    border-radius: 40px;
+    font-size: 25px;
+    color: #000;
+    padding: 20px 45px 20px 20px;
+}
+
+button {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, 1);
+    border-radius: 40px;
+    font-size: 25px;
+    color: #000;
+    padding: 20px 45px 20px 20px;
+}
+
+    button:hover {
+        background-color: lightgreen;
+        color: #000;
+    }
